--- a/app.yaml
+++ b/app.yaml
@@ -4,7 +4,7 @@ metadata:
   name: argocdhooks
   namespace: argocd
 spec:
-  project: myproj
+  project: default
   source:
     repoURL: https://github.com/amitopenwriteup/argocdhooks.git
     targetRevision: HEAD
